--- a/cmd/streaming/config/models/product/product_model.yaml
+++ b/cmd/streaming/config/models/product/product_model.yaml
@@ -16,17 +16,23 @@ properties:
         schema: public
         table: products
         column: id
+
+    PaymentGateway: # Name of the system. Must match a name in systems.yaml
+      push_to: true # Push this field to the system? False if blank
+      require_for_create: true # Is this field required to create an object in the system?
+      location:
+        object: product
+        field: metadata.id # Using Stripe's metadata to store the ID
     
     DataWarehouse:
       search_key: true
-      push_to: true # Push this field to the system? False if blank
+      push_to: true
+      require_for_create: true
       location: 
         database: analytics
         schema: public
         table: products
         column: id
-      required_for: # Is this field required for certain operations? create, update, delete
-        - create
 
   ### Stripe ID ###
   stripe_id:
@@ -35,13 +41,12 @@ properties:
     ProdDB:
       search_key: true
       push_to: true
+      require_for_create: true
       location:
         database: prod
         schema: public
         table: products
         column: stripe_id
-      required_for:
-        - create
 
     PaymentGateway:
       search_key: true
@@ -53,13 +58,12 @@ properties:
     DataWarehouse:
       search_key: true
       push_to: true
+      require_for_create: true
       location:
         database: analytics
         schema: public
         table: products
         column: stripe_id
-      required_for:
-        - create
       
   ### Name ###
   name:
@@ -68,45 +72,41 @@ properties:
     ProdDB:
       push_to: true
       receive_from: true
+      require_for_create: true
       location:
         database: prod
         schema: public
         table: products
         column: name
-      required_for:
-        - create
 
     PaymentGateway:
       push_to: true
       receive_from: true
+      require_for_create: true
       location:
         object: product
         field: name
-      required_for:
-        - create
 
     DataWarehouse:
       push_to: true
+      require_for_create: true
       location:
         database: analytics
         schema: public
         table: products
         column: name
-      required_for:
-        - create
 
-  ### Price ###
+  ### Default Price ###
   default_price:
     type: string
     ProdDB:
       push_to: true
+      require_for_create: true
       location: 
         database: prod
         schema: public
         table: products
         column: default_price
-      required_for:
-        - create
 
     PaymentGateway:
       receive_from: true
@@ -121,3 +121,44 @@ properties:
         schema: public
         table: products
         column: default_price
+
+  ### Price ###
+
+  # This is an example showing a future feature to execute arbitrary code
+
+  price:
+    type: number
+
+    PaymentGateway1:
+      push_to: true
+      receive_from: true
+      require_for_create: true
+      python:
+
+        on_push: # Execute inline code or a Python file
+          virtual_env: 3.11-db-drivers
+          code: |
+            import stripe
+            stripe.Price.create(
+                product=product_id,
+                currency='usd',
+                unit_amount=int(price * 100),  # Convert to cents
+                metadata={
+                    'id': product_id  # Store the product ID in metadata
+                }
+            )
+          var_map:
+            - product_id
+            - price
+
+    PaymentGateway2:
+      push_to: true
+      receive_from: true
+      require_for_create: true
+      api: # Make arbitrary API calls
+
+        on_receive:
+          route: http://example.com/api/price
+          method: POST
+          headers:
+            Content-Type: application/json
